# personal-finance-dashboard

./: .gitignore  .pylintrc  README.md  pyproject.toml
app/: main.py  types.py
app/common/: types.py  utils.py  widgets.py
app/home/: home_page.py
app/parse/: parse_page.py  parse_service.py
