[project]
name = "personal-finance-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Sonya Castro",email = "sonya.castro.gomez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "pylint (>=3.3.8,<4.0.0)",
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
